# ush

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .start.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  deny.toml  flake.nix  install.sh
apps/ush/: Cargo.toml
apps/ush/src/: cli.rs  main.rs  panic_hook.rs  runtime_diagnostics.rs  script_docs.rs  sourcemap_json.rs  test_runner.rs
apps/ush/src/fixtures/: runtime_diagnostics_multiline.sh  runtime_diagnostics_simple.sh
apps/ush/src/runtime_diagnostics/: tests.rs
apps/ush/tests/: async_blocks.rs  bin.rs  builtins.rs  cli_smoke.rs  control.rs  display.rs  error_streams.rs  examples.rs  helpers.rs  html.rs  http_regex.rs  inline_shell.rs  jobs.rs  modules.rs  port_stop.rs  sammary.rs  script_dispatch.rs  signals.rs  smoke.rs  startup.rs  strings.rs  test_runner.rs  tooling.rs
apps/ush/tests/builtins/: git_views.rs  glob_and_rm.rs  interactive.rs  lookup.rs  stylish_files.rs  tasks_and_which.rs
apps/ush/tests/common/: mod.rs
apps/ush/tests/fixtures/: error_raise.stderr  error_try.stderr  test_runner_failure.stdout  test_runner_success.stdout
apps/ush/tests/fixtures/builtins/: rm_guard_reject.stderr  stylish_alias.stdout  stylish_command_v.stdout  stylish_diff_u.stdout  stylish_env_cleared.stdout  stylish_env_sorted.stdout  stylish_git_branch.stdout  stylish_git_log.stdout  stylish_git_status.stdout  stylish_grep_file.stdout  stylish_grep_no_matches.stdout  stylish_grep_stdin.stdout  stylish_history.stdout  stylish_history_limit.stdout  stylish_ls_almost_all.stdout  stylish_ls_broken_symlink.stdout  stylish_ls_hidden_target.stdout  stylish_ls_lah.stdout  stylish_tasks.stdout  stylish_type_missing.stdout  stylish_which_echo.stdout  stylish_which_missing.stdout  stylish_which_multi.stdout  which_echo_plain.stdout
apps/ush/tests/fixtures/html/: json_fallback.stdout  xml_fallback.stdout  xml_pretty.stdout
apps/ush/tests/fixtures/jobs/: background_jobs.stdout  fg.stdout
apps/ush/tests/fixtures/sammary/: default_excludes_lock.stdout  include_lock.stdout  plain.stdout  recurse.stdout  stylish.stdout
apps/ush/tests/fixtures/smoke/: script_help.stdout  script_man.stdout  source_state.stdout  stylish_pwd.stdout
apps/ush/tests/fixtures/startup/: login_profile.stdout
apps/ush/tests/smoke/: basic_cases.rs  script_cases.rs
apps/ush/tests/support/: mod.rs
apps/ush_lsp/: Cargo.toml
apps/ush_lsp/src/: convert.rs  document.rs  main.rs  server.rs
apps/ush_lsp/src/convert/: tests.rs
apps/ush_lsp/src/server/: requests.rs
apps/ush_lsp/tests/: cli_smoke.rs  highlight_and_symbols.rs  initialize_handshake.rs  refs_definition_rename.rs
crates/ush_compiler/: Cargo.toml
crates/ush_compiler/benches/: compile.rs
crates/ush_compiler/src/: ast.rs  effects.rs  env.rs  errors.rs  imports.rs  lib.rs  scan.rs  sourcemap.rs  string_literal.rs  traits.rs  types.rs  util.rs
crates/ush_compiler/src/ast/: control.rs  items.rs  ty.rs
crates/ush_compiler/src/codegen/: alias.rs  bin.rs  blocks.rs  builtin_methods.rs  call_support.rs  calls.rs  compare.rs  control.rs  control_support.rs  docs.rs  enum_registry.rs  functions.rs  io.rs  method_fields.rs  methods.rs  methods_support.rs  mod.rs  primitive.rs  render.rs  runtime_expr.rs  runtime_member.rs  runtime_support.rs  shared.rs  statement.rs  statement_control.rs  task_block.rs  tasks.rs
crates/ush_compiler/src/codegen/stdlib/: env.rs  fs.rs  http.rs  mod.rs  path.rs  process.rs  regex.rs  string.rs
crates/ush_compiler/src/docs/: mod.rs  parse.rs  render.rs
crates/ush_compiler/src/effects/: analyze.rs  control.rs  declared_errors.rs  matching.rs  support.rs
crates/ush_compiler/src/matching/: emit.rs  exhaustiveness.rs  mod.rs  pattern.rs  sequence.rs
crates/ush_compiler/src/parse/: attr.rs  compare.rs  condition.rs  control.rs  declaration.rs  declaration_support.rs  expr.rs  expr_support.rs  impls.rs  inline.rs  mod.rs  path.rs  record.rs  returns.rs  signature.rs  statement.rs  statement_support.rs  use_decl.rs
crates/ush_compiler/src/sourcemap/: output_buffer.rs
crates/ush_compiler/tests/: async_blocks.rs  control.rs  control_errors.rs  docs.rs  error_streams.rs  errors.rs  http_regex.rs  inline_shell.rs  io_snapshot.rs  match_exhaustiveness.rs  modules.rs  parser_calls.rs  runtime.rs  shell_snapshots.rs  sourcemap.rs  strings.rs  tail_expressions.rs  traits.rs  typed_cli.rs
crates/ush_compiler/tests/fixtures/: io_snapshot.txt  shell_snapshots_catalog.md  sourcemap_listing.txt  sourcemap_mapped_listing.txt
crates/ush_config/: Cargo.toml
crates/ush_config/src/: lib.rs  starship.rs
crates/ush_shell/: Cargo.toml
crates/ush_shell/benches/: parser.rs
crates/ush_shell/src/: builtins.rs  commands.rs  execute.rs  expand.rs  lib.rs  options.rs  parser.rs  process.rs  prompt.rs  signal.rs  startup.rs  style.rs
crates/ush_shell/src/builtins/: command.rs  core.rs  core_support.rs  fsam.rs  glob.rs  interactive.rs  interactive_support.rs  introspection.rs  sammary.rs  tasks.rs  test_eval.rs
crates/ush_shell/src/helpers/: browser.rs  flat_lambda.rs  lambda.rs  lambda_syntax.rs  mod.rs  sequence.rs  tests.rs  value.rs  zip.rs
crates/ush_shell/src/parser/: alias.rs  fallback.rs  tests.rs
crates/ush_shell/src/process/: io.rs  jobs.rs  state.rs
crates/ush_shell/src/prompt/: path.rs  starship.rs  tests.rs
crates/ush_shell/src/repl/: bindings.rs  builtin_completion.rs  complete.rs  completion_state.rs  contextual.rs  descriptions.rs  display.rs  editor.rs  git_completion.rs  highlight.rs  mod.rs  selection.rs  syntax.rs  tests.rs  validate.rs
crates/ush_shell/src/startup/: tests.rs
crates/ush_shell/src/style/: cat.rs  common.rs  introspection.rs  ls.rs  ls_support.rs  mod.rs  process.rs  tasks.rs
crates/ush_shell/tests/: parser.rs
crates/ush_tooling/: Cargo.toml
crates/ush_tooling/src/: completion.rs  diagnostic.rs  folding.rs  format.rs  highlight.rs  hover.rs  lib.rs  references.rs  semantic.rs  signature.rs  symbol.rs  token.rs
crates/ush_tooling/tests/: semantic.rs
(+148 files in other folders)
