[workspace]
members = [
  "apps/ush",
  "apps/ush_lsp",
  "crates/ush_compiler",
  "crates/ush_config",
  "crates/ush_shell",
  "crates/ush_tooling",
]
exclude = ["vendor/rustyline"]
default-members = ["apps/ush"]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
bumpalo = { version = "3.19.0", default-features = false, features = ["collections"] }
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
comfy-table = "7.2.2"
compact_str = { version = "0.9.0", default-features = false }
criterion = "0.8.2"
directories = "6.0.0"
glob = "0.3.3"
hashbrown = { version = "0.15.5", default-features = false }
libc = "0.2.177"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
memchr = { version = "2.7.6", default-features = false }
phf = { version = "0.11.3", default-features = false, features = ["macros"] }
rustc-hash = { version = "2.1.1", default-features = false }
rustyline = { version = "18.0.0", features = ["custom-bindings"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
quick-xml = "0.38.3"
shell-words = "1.1.1"
smallvec = { version = "1.15.1", default-features = false }
tempfile = "3.23.0"
toml = "0.9.8"
which = "8.0.2"

[patch.crates-io]
rustyline = { path = "vendor/rustyline" }
