[workspace]
members = [
  "apps/ush",
  "apps/ush_lsp",
  "crates/ush_compiler",
  "crates/ush_config",
  "crates/ush_shell",
  "crates/ush_tooling",
]
exclude = ["vendor/rustyline"]
default-members = ["apps/ush"]
resolver = "2"

[workspace.package]
version = "0.6.1"
edition = "2024"
# Bumped from 1.85 → 1.88 because criterion 0.8.2 requires 1.86 and
# home 0.5.12 (transitive via dev/build tools) requires 1.88. 1.88 is
# the smallest version that satisfies the current dependency graph.
rust-version = "1.88"
license = "MIT"
authors = ["Ubugeeei <ubuge1122@gmail.com>"]
repository = "https://github.com/ubugeeei/ush"
homepage = "https://github.com/ubugeeei/ush"
readme = "README.md"
keywords = ["shell", "posix", "rust", "compiler", "cli"]
categories = ["command-line-utilities", "command-line-interface"]

[workspace.dependencies]
anyhow = "1.0.102"
bumpalo = { version = "3.19.0", default-features = false, features = ["collections"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
compact_str = { version = "0.9.0", default-features = false }
criterion = "0.8.2"
directories = "6.0.0"
glob = "0.3.3"
hashbrown = { version = "0.17.1", default-features = false }
libc = "0.2.186"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
memchr = { version = "2.7.6", default-features = false }
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
rustc-hash = { version = "2.1.1", default-features = false }
rustyline = { version = "18.0.0", features = ["custom-bindings"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
quick-xml = "0.40.1"
shell-words = "1.1.1"
smallvec = { version = "1.15.1", default-features = false }
tempfile = "3.23.0"
toml = "1.1.2"
which = "8.0.2"

[patch.crates-io]
rustyline = { path = "vendor/rustyline" }

# Release-binary tightening. These are the settings that ship in the
# GitHub Release archives and the Docker image; the dev profile is
# left untouched so iteration time stays fast.
[profile.release]
# Cross-translation-unit inlining at the cost of slightly slower
# linker time. `thin` rather than `fat` because the win past `thin`
# is small for our binary size and the extra build time is real.
lto = "thin"
# Force a single codegen unit so LTO can see the whole crate graph
# (otherwise rustc still partitions per-crate).
codegen-units = 1
# Drop debuginfo from release binaries. Symbols are kept for stack
# traces; debuginfo and the section that referenced /home/runner/...
# paths inside the build host are removed.
strip = "debuginfo"
# Abort instead of unwinding on panic in release. The shell does not
# rely on unwinding (no panic = Err catches across FFI), so this is
# pure binary-size + perf win.
panic = "abort"
