[package]
name = "ush"
description = "An experimental Rust shell with a .ush language that compiles to POSIX sh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
ush_config = { path = "../../crates/ush_config" }
ush_shell = { path = "../../crates/ush_shell" }
ush_compiler = { path = "../../crates/ush_compiler" }
ush_tooling = { path = "../../crates/ush_tooling" }

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true

[lints]
workspace = true
