[package]
name = "ush_lsp"
description = "Language Server Protocol server for .ush files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde_json.workspace = true
ush_tooling = { path = "../../crates/ush_tooling" }

