[package]
name = "ush_compiler"
description = "Core compiler that lowers .ush programs to POSIX sh (no_std + alloc capable)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["anyhow/std"]

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
bumpalo.workspace = true
compact_str.workspace = true
hashbrown.workspace = true
memchr.workspace = true
phf.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "compile"
harness = false

[lints]
workspace = true
