[package]
name = "ush_shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
comfy-table.workspace = true
glob.workspace = true
libc.workspace = true
quick-xml.workspace = true
rustyline.workspace = true
serde_json.workspace = true
shell-words.workspace = true
which.workspace = true
ush_config = { path = "../ush_config" }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "parser"
harness = false
