[package]
name = "ush_tooling"
description = "Formatter, diagnostics, and semantic-token generation for .ush files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
ush_compiler = { path = "../ush_compiler" }


[lints]
workspace = true
